[update] footerの調整とSpotifyの追加

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,9 +32,14 @@
           </div>
           <ul>
             {% if site.itunes_podcast_url %}
-              <li>
-                <a href="{{ site.itunes_podcast_url }}" target="_blank">iTunesで購読</a>
-              </li>
+            <li>
+              <a href="{{ site.itunes_podcast_url }}" target="_blank">iTunesで購読</a>
+            </li>
+            {% endif %}
+            {% if site.spotify_podcast_url %}
+            <li>
+              <a href="{{ site.itunes_podcast_url }}" target="_blank">Spotifyで購読</a>
+            </li>
             {% endif %}
             <li>
               <a href="http://subscribeonandroid.com/{{ site.github.url | remove: "https://" | remove: "http://" }}/feed.xml" target="_blank">Androidで購読</a>
@@ -50,7 +55,7 @@
       </div>
     </div>
     <div class="footer-copyright">
-      © 2016 <a href="{{ site.github.url }}/">{{ site.title }}</a>
+      © 2021 <a href="{{ site.github.url }}/">{{ site.title }}</a>
     </div>
   </div>
 </footer>
