[update] Spotify URLの調整

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
             {% endif %}
             {% if site.spotify_podcast_url %}
             <li>
-              <a href="{{ site.itunes_podcast_url }}" target="_blank">Spotifyで購読</a>
+              <a href="{{ site.spotify_podcast_url }}" target="_blank">Spotifyで購読</a>
             </li>
             {% endif %}
             <li>
